good fix on small screens

--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -26,7 +26,7 @@
 		border: 1px solid #ccc;
 		border-top: none;
 		border-radius: 4px;
-		padding: 8px 5px 5px 5px;
+		// padding: 8px 5px 5px 5px;
 	}
 
 	&__item {
@@ -46,8 +46,8 @@
 		flex-wrap: nowrap;
 		justify-content: space-between;
 		align-items: center;
-		margin: 5px;
-		width: calc(100% - 10px);
+    margin: 7px;
+    width: calc(100% - 14px);
 	}
 	&-item-label {
 	}
