--- a/src/index.scss
+++ b/src/index.scss
@@ -24,13 +24,22 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body, html {
   margin: 0;
-  height: 100vh;
-  width: 100vw;
-  min-width: 320px;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  // min-width: 320px;
   min-height: 100vh;
   background-color: #f9f9f9;
+}
+
+#root {
+  height: 100%;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
+  // align-items: center;
 }
 
 h1 {
